--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
+    "motion": "^12.7.4",
+    "motion-plus": "^0.1.6",
     "next": "15.2.4",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
